--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"format": "prettier --write ."
 	},
 	"dependencies": {
-		"@minecraft/server": "2.1.0"
+		"@minecraft/server": "2.1.0",
+		"@minecraft/server-ui": "2.0.0"
 	},
 	"devDependencies": {
 		"@types/node": "^22.17.0",
