--- a/src/bp/manifest.json
+++ b/src/bp/manifest.json
@@ -31,6 +31,10 @@
 		{
 			"module_name": "@minecraft/server",
 			"version": "2.1.0"
+		},
+		{
+			"module_name": "@minecraft/server-ui",
+			"version": "2.0.0"
 		}
 	]
 }
