--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"lint": "tsc",
 		"dev": "node scripts/dev.js",
+		"clean": "node scripts/clean.js",
 		"format": "prettier --write ."
 	},
 	"dependencies": {
