--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
 		"@minecraft/server-ui": "2.0.0"
 	},
 	"devDependencies": {
+		"@types/archiver": "^6.0.3",
 		"@types/node": "^22.17.0",
+		"archiver": "^6.0.2",
 		"prettier": "^3.6.2",
 		"sync-directory": "^6.0.5",
 		"typescript": "^5.9.2"
