--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@minecraft/server-ui": "2.0.0"
 	},
 	"devDependencies": {
+		"@mcbe-toolbox-lc/builder": "^0.1.1",
 		"@types/archiver": "^6.0.3",
 		"@types/node": "^22.17.0",
 		"archiver": "^6.0.2",
