--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@types/archiver": "^6.0.3",
 		"@types/node": "^22.17.0",
 		"archiver": "^6.0.2",
+		"dotenv-cli": "^11.0.0",
 		"prettier": "^3.6.2",
 		"sync-directory": "^6.0.5",
 		"typescript": "^5.9.2"
