--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@types/node": "^22.17.0",
 		"dotenv-cli": "^11.0.0",
 		"prettier": "^3.6.2",
+		"shx": "^0.4.0",
 		"tsx": "^4.21.0",
 		"typescript": "^5.9.2"
 	}
