--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 	},
 	"dependencies": {
 		"@minecraft/server": "2.2.0",
-		"@minecraft/server-ui": "2.0.0"
+		"@minecraft/server-ui": "2.0.0",
+		"gl-matrix": "^3.4.4"
 	},
 	"devDependencies": {
 		"@mcbe-toolbox-lc/builder": "^0.1.1",
