--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"format": "prettier --write ."
 	},
 	"dependencies": {
+		"@mcbe-toolbox-lc/vecarr": "^0.1.3",
 		"@minecraft/server": "2.2.0",
 		"@minecraft/server-ui": "2.0.0",
 		"gl-matrix": "^3.4.4"
