--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,3 @@
 {
-	"recommendations": [
-		"mojang-studios.minecraft-debugger",
-		"esbenp.prettier-vscode"
-	]
+	"recommendations": ["mojang-studios.minecraft-debugger", "esbenp.prettier-vscode"]
 }
